fixed vertical text alignment on tiles

--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
 	width: 100px;
 	height: 100px;
 	text-align: center;
-	line-height: 1.5em;
+	line-height: 100px;
+	font-size: 1.5em;
 }
 
 .c1{
@@ -27,14 +28,6 @@ body {
 
 .r1 {
 	margin-top: 25px;	
-}
-
-span {
-	font-size: 1.5em;
-	display: inline-block;
-	line-height: 1.5em;
-	vertical-align: middle;
-	color: red;
 }
 
 .scoreboard {
